@@ -33,6 +33,8 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 
 		private readonly ProcessingQueue<ImageKey> slowThumbnailQueue;
 
+		private readonly ProcessingQueue<ImageKey> slowThumbnailQueueUnlimited;
+
 		private readonly ProcessingQueue<ImageKey> slowPageQueue;
 
 		private readonly ProcessingQueue<ImageKey> fastPageQueue;
@@ -48,6 +50,8 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 		public ProcessingQueue<ImageKey> FastThumbnailQueue => fastThumbnailQueue;
 
 		public ProcessingQueue<ImageKey> SlowThumbnailQueue => slowThumbnailQueue;
+
+		public ProcessingQueue<ImageKey> SlowThumbnailQueueUnlimited => slowThumbnailQueueUnlimited;
 
 		public ProcessingQueue<ImageKey> SlowPageQueue => slowPageQueue;
 
@@ -69,7 +73,7 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 		{
 			get
 			{
-				if (!slowPageQueue.IsActive && !slowThumbnailQueue.IsActive && !fastPageQueue.IsActive)
+				if (!slowPageQueue.IsActive && !slowThumbnailQueue.IsActive && !slowThumbnailQueueUnlimited.IsActive && !fastPageQueue.IsActive)
 				{
 					return fastThumbnailQueue.IsActive;
 				}
@@ -118,21 +122,22 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 			slowPageQueue = new ProcessingQueue<ImageKey>(threadCount, "Background Slow Page Queue", ThreadPriority.BelowNormal, pageCount * 2);
 			fastThumbnailQueue = new ProcessingQueue<ImageKey>("Background Fast Thumbnails Queue", ThreadPriority.Lowest, 256);
 			slowThumbnailQueue = new ProcessingQueue<ImageKey>(threadCount, "Background Slow Thumbnails Queue", ThreadPriority.Lowest, 256);
+			slowThumbnailQueueUnlimited = new ProcessingQueue<ImageKey>(threadCount, "Background Slow Thumbnails Unlimited Queue", ThreadPriority.Lowest, int.MaxValue);
 			pages.MemoryCache.ItemAdded += MemoryPageCacheItemAdded;
 			thumbs.MemoryCache.ItemAdded += MemoryThumbnailCacheItemAdded;
-			slowThumbnailQueue.DefaultProcessingQueueAddMode = (fastThumbnailQueue.DefaultProcessingQueueAddMode = (slowPageQueue.DefaultProcessingQueueAddMode = (fastPageQueue.DefaultProcessingQueueAddMode = ProcessingQueueAddMode.AddToTop)));
+			slowThumbnailQueue.DefaultProcessingQueueAddMode = slowThumbnailQueueUnlimited.DefaultProcessingQueueAddMode = (fastThumbnailQueue.DefaultProcessingQueueAddMode = (slowPageQueue.DefaultProcessingQueueAddMode = (fastPageQueue.DefaultProcessingQueueAddMode = ProcessingQueueAddMode.AddToTop)));
 		}
 
 		public bool AreImagesPending(string filePath)
 		{
-			if (!slowPageQueue.PendingItems.Any((ImageKey key) => key.Location == filePath) && !fastPageQueue.PendingItems.Any((ImageKey key) => key.Location == filePath) && !fastThumbnailQueue.PendingItems.Any((ImageKey key) => key.Location == filePath))
+			if (!slowPageQueue.PendingItems.Any((ImageKey key) => key.Location == filePath) && !fastPageQueue.PendingItems.Any((ImageKey key) => key.Location == filePath) && !fastThumbnailQueue.PendingItems.Any((ImageKey key) => key.Location == filePath) && !slowThumbnailQueueUnlimited.PendingItems.Any((ImageKey key) => key.Location == filePath))
 			{
 				return slowThumbnailQueue.PendingItems.Any((ImageKey key) => key.Location == filePath);
 			}
 			return true;
 		}
 
-		public void AddThumbToQueue(ThumbnailKey key, object callbackKey, AsyncCallback asyncCallback)
+		public void AddThumbToQueue(ThumbnailKey key, object callbackKey, AsyncCallback asyncCallback, bool noSizeLimit = false)
 		{
 			if (thumbs.DiskCache.IsAvailable(key))
 			{
@@ -140,7 +145,7 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 			}
 			else
 			{
-				slowThumbnailQueue.AddItem(key, callbackKey, asyncCallback);
+				(noSizeLimit ? slowThumbnailQueueUnlimited : slowThumbnailQueue).AddItem(key, callbackKey, asyncCallback);
 			}
 		}
 
@@ -513,12 +518,33 @@ namespace cYo.Projects.ComicRack.Engine.IO.Cache
 			}
 		}
 
+		public void CacheThumbnail(ThumbnailKey key, ComicBook cb, bool noSizeLimit = false)
+		{
+			if (cb == null)
+				return;
+
+			AddThumbToQueue(key, null, delegate
+			{
+				if (thumbs.DiskCache.IsAvailable(key))
+					return;
+
+				try
+				{
+					GetThumbnail(key, cb).SafeDispose();
+				}
+				catch
+				{
+				}
+			}, noSizeLimit);
+		}
+
 		protected override void Dispose(bool disposing)
 		{
 			if (disposing)
 			{
 				fastThumbnailQueue.Dispose();
 				slowThumbnailQueue.Dispose();
+				slowThumbnailQueueUnlimited.Dispose();
 				fastPageQueue.Dispose();
 				slowPageQueue.Dispose();
 				thumbs.Dispose();
