@@ -36,6 +36,7 @@ Community Edition Build 0.9.180:
 * NEW: Possible to add icons that apply to any writable string fields. Just give the zip the name of the field with the "_" prefix in front. (Ex: "Carl Barks.png" inside "_Writer".) 
 * NEW: Added read support for Jpeg2000 images (.j2k & .jp2). It is a bit slow, so I wouldl use it to convert to another file format.
 * NEW: Added an option to append a tag during export. It will append tags (only if they do not already exists) to the book file & to the library (only if set to replace or add to library).
+* NEW: Added feature to generate thumbnails for all covers. Under File => Generate Cover Thumbnails.
 
 
 * CHANGE: Program renamed to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition.
